--- a/src/moodle_tools/questions/templates/quiz.xml.j2
+++ b/src/moodle_tools/questions/templates/quiz.xml.j2
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <quiz>
-{% for question in questions %}
-    {{ question|indent }}
+{% for question in questions -%}
+    {{ question }}
 {% endfor %}
 </quiz>
