--- a/src/moodle_tools/questions/templates/question.xml.j2
+++ b/src/moodle_tools/questions/templates/question.xml.j2
@@ -17,8 +17,8 @@
     </generalfeedback>
     {% block content -%}
     <idnumber></idnumber>
-    <defaultgrade>1</defaultgrade>
-    <penalty>1</penalty>
+    <defaultgrade>{{ grade }}</defaultgrade>
+    <penalty>0</penalty>
     <hidden>0</hidden>
     {%- endblock %}
 </question>
