#20 Fix missing CDATA in template for coderunner question types

--- a/src/moodle_tools/questions/templates/coderunner.xml.j2
+++ b/src/moodle_tools/questions/templates/coderunner.xml.j2
@@ -14,7 +14,7 @@
     <globalextra></globalextra>
     <useace></useace>
     <resultcolumns>{{ result_columns }}</resultcolumns>
-    <template>{{ test_logic }}</template>
+    <template><![CDATA[{{ test_logic }}]]></template>
     <iscombinatortemplate></iscombinatortemplate>
     <allowmultiplestdins></allowmultiplestdins>
     <answer><![CDATA[{{ answer }}]]></answer>
