#11 centralized minimal yaml schema for all question types that pass strict mode. Change in some attribute names to homogenize accross question types.

--- a/src/moodle_tools/questions/templates/true_false.xml.j2
+++ b/src/moodle_tools/questions/templates/true_false.xml.j2
@@ -4,7 +4,7 @@
     <answer fraction="0" format="html">
         <text><![CDATA[{{ wrong_answer }}]]></text>
         <feedback format="html">
-            <text>{{ "<![CDATA[{}]]>".format(wrong_feedback) if wrong_feedback }}</text>
+            <text>{{ "<![CDATA[{}]]>".format(incorrect_feedback) if incorrect_feedback }}</text>
         </feedback>
     </answer>
     <answer fraction="100" format="html">
