--- a/src/moodle_tools/questions/templates/missing_words.xml.j2
+++ b/src/moodle_tools/questions/templates/missing_words.xml.j2
@@ -1,7 +1,10 @@
 {% extends "question.xml.j2" %}
 {% block content %}
     {{ super() }}
-    <shuffleanswers>1</shuffleanswers>
+    <shuffleanswers>
+        {# Can this but "1" or "true"? We should make it consistent. #}
+        {{ "true" if shuffle_answers == true else "false" }}
+    </shuffleanswers>
     <correctfeedback format="html">
         <text>{{ "<![CDATA[{}]]>".format(correct_feedback) if correct_feedback }}</text>
     </correctfeedback>
