--- a/src/moodle_tools/questions/templates/testlogic_ddl.py.j2
+++ b/src/moodle_tools/questions/templates/testlogic_ddl.py.j2
@@ -49,7 +49,7 @@ if db_working != ":memory:":
 
 testcode = """{{ TEST.testcode | e('py') }}"""
 extra = """{{ TEST.extra | e('py') }}"""
-con = duckdb.conect(db_working, config={"temp_directory": os.getcwd()})
+con = duckdb.connect(db_working, config={"temp_directory": os.getcwd()})
 
 # Execute student answer
 try:
