--- a/src/moodle_tools/questions/templates/testlogic_dql.py.j2
+++ b/src/moodle_tools/questions/templates/testlogic_dql.py.j2
@@ -7,17 +7,19 @@ import shutil
 import duckdb
 
 MAX_ROWS = 50
-MAX_PRINT_WIDTH = 500
+MAX_WIDTH = 500
 
 # Use Twig to get students answer
 student_answer = """{{ STUDENT_ANSWER | e('py') }}""".rstrip()
 
 # Parsing the student answer
-if not student_answer.endswith(';'):
-    student_answer = student_answer + ';'
+if not student_answer.endswith(";"):
+    student_answer = student_answer + ";"
+if "pragma" in student_answer.lower():
+    raise ValueError("It is not allowed to use PRAGMA statements.")
 
 # Getting the database file
-db_files = [fname for fname in os.listdir() if fname.endswith('.db')]
+db_files = [fname for fname in os.listdir() if fname.endswith(".db")]
 if len(db_files) == 0:
     db_working = ":memory:"
 elif len(db_files) == 1:
@@ -38,13 +40,16 @@ testcode = """{{ TEST.testcode | e('py') }}"""
 extra = """{{ TEST.extra | e('py') }}"""
 con = duckdb.connect(db_working, config={"temp_directory": os.getcwd()})
 
+# Set DB parameters
+con.sql("SET memory_limit = '{{ QUESTION.memlimitmb - 50 }}MB'; SET threads = 1;")
+
 # Execute database modification
 con.sql(testcode)
 
 # Execute student answer
 try:
     res = con.sql(student_answer)
-    res.show(max_width=MAX_PRINT_WIDTH, max_rows=MAX_ROWS) if res else print(res)
+    res.show(max_width=MAX_WIDTH, max_rows=MAX_ROWS) if res else print(res)
 except Exception as e:
     raise e
 finally:
