added basic support for TemplateGrader in coderunner, switched over ddl to templategrader

--- a/src/moodle_tools/questions/templates/coderunner.xml.j2
+++ b/src/moodle_tools/questions/templates/coderunner.xml.j2
@@ -23,7 +23,7 @@
     <language>python3</language>
     <acelang>{{ ace_lang }}</acelang>
     <sandbox></sandbox>
-    <grader>EqualityGrader</grader>
+    <grader>{{ grader_type }}</grader>
     <cputimelimitsecs></cputimelimitsecs>
     <memlimitmb>1000</memlimitmb>
     <sandboxparams><![CDATA[{"numprocs": 100}]]></sandboxparams>
