Support for coderunner streaming questions

--- a/src/moodle_tools/questions/templates/coderunner.xml.j2
+++ b/src/moodle_tools/questions/templates/coderunner.xml.j2
@@ -10,7 +10,7 @@
     <showsource>0</showsource>
     <answerboxlines>18</answerboxlines>
     <answerboxcolumns>100</answerboxcolumns>
-    <answerpreload>{{ answer_preload }}</answerpreload>
+    <answerpreload><![CDATA[{{ answer_preload }}]]></answerpreload>
     <globalextra></globalextra>
     <useace>1</useace>
     <resultcolumns><![CDATA[{{ result_columns }}]]></resultcolumns>
