Import questions into the current context instead of the course-level question bank

--- a/src/moodle_tools/questions/templates/question.xml.j2
+++ b/src/moodle_tools/questions/templates/question.xml.j2
@@ -1,7 +1,7 @@
 {% if category %}
 <question type="category">
     <category>
-        <text>$course$/{{ category }}</text>
+        <text>$module$/{{ category }}</text>
     </category>
 </question>
 {% endif %}
