--- a/src/moodle_tools/questions/templates/missing_words.xml.j2
+++ b/src/moodle_tools/questions/templates/missing_words.xml.j2
@@ -2,7 +2,7 @@
 {% block content %}
     {{ super() }}
     <shuffleanswers>
-        {{ "1" if shuffle_answers else "0" }}
+        {{ "1" if shuffle_answers == "shuffle" else "0" }}
     </shuffleanswers>
     <correctfeedback format="html">
         <text>{{ "<![CDATA[{}]]>".format(correct_feedback) if correct_feedback }}</text>
@@ -18,6 +18,7 @@
     <selectoption>
         <text>{{ option.answer }}</text>
         <group>{{ option.group }}</group>
+        <!-- ordinal: {{ option.ordinal }}, group: {{ option.group_letter }} -->
     </selectoption>
     {% endfor %}
 {% endblock%}
