added logic that allows checking enums flexibly in combination with check. Not null is now not tested for PKs.

--- a/src/moodle_tools/questions/templates/coderunner.xml.j2
+++ b/src/moodle_tools/questions/templates/coderunner.xml.j2
@@ -51,7 +51,7 @@
                 <text><![CDATA[{{ testcase.code }}]]></text>
             </testcode>
             <stdin>
-                <text></text>
+                <text><![CDATA[{{ testcase.additional_info }}]]></text>
             </stdin>
             <expected>
                 <text><![CDATA[{{ testcase.result }}]]></text>
