--- a/src/moodle_tools/questions/templates/testlogic_ddl.py.j2
+++ b/src/moodle_tools/questions/templates/testlogic_ddl.py.j2
@@ -1,5 +1,6 @@
 from __future__ import annotations
 
+import json
 import os
 import re
 import shutil
@@ -32,6 +33,8 @@ SEPARATOR = "#<ab@17943918#@>#"
 # Running each test in isolation
 {% for TEST in TESTCASES %}
 
+additional_info = {{ TEST.stdin | e('py') }}
+
 if db_working != ":memory:":
     db_working = f"{db_working}.copy"
     shutil.copyfile(db_files[0], db_working)  # Copy clean writeable db file
@@ -52,14 +55,24 @@ for statement in statements:
     try:
         res = con.sql(statement)
         res.show(max_width=MAX_WIDTH, max_rows=MAX_ROWS) if res else print(res)
-    except duckdb.ConstraintException as e:
+    except (duckdb.ConstraintException, duckdb.ConversionException) as e:
         # DuckDB prints the individual constraint implementation in the error message
         # so we have to filter it out.
-        match = re.search(
+        table_under_test = re.search(r"INSERT INTO (.+?) ", statement).group(1)
+        table_flex_enums = additional_info.get("flex_enum_tables", [])
+
+        match_check = re.search(
             r"^Constraint Error: CHECK constraint failed on table (.+?) .*$", str(e)
         )
-        if match:
-            print(f"CHECK constraint failed on table {match.group(1)}")
+
+        match_enum = re.search(
+            r"^Conversion Error: Could not convert.*$", str(e), re.M
+        )
+
+        if (match_check or match_enum) and table_under_test in table_flex_enums:
+            print(f"CHECK constraint failed or wrong ENUM in table {table_under_test}")
+        elif match_check:
+            print(f"CHECK constraint failed on table {table_under_test}")
         else:
             print(e)
     except duckdb.Error as e:
