changes from code review

--- a/src/moodle_tools/questions/templates/ddl_check_tablecorrectness/30-notnull.sql.j2
+++ b/src/moodle_tools/questions/templates/ddl_check_tablecorrectness/30-notnull.sql.j2
@@ -1,5 +1,5 @@
 -- Not null columns
-SELECT name AS name_notnull
+SELECT name AS name_notnull_nopk
 FROM pragma_table_info("{{ tablename }}")
 WHERE "notnull" AND NOT "pk" AND NOT "dflt_value"
 ORDER BY name;
