--- a/src/moodle_tools/questions/templates/ddl_check_tablecorrectness/10-name.sql.j2
+++ b/src/moodle_tools/questions/templates/ddl_check_tablecorrectness/10-name.sql.j2
@@ -1,4 +1,4 @@
 -- Column names
-SELECT name AS name_columns
+SELECT lower(name) AS name_columns
 FROM pragma_table_info("{{ tablename }}")
-ORDER BY name;
+ORDER BY lower(name);
