--- a/src/moodle_tools/questions/templates/ddl_check_tablecorrectness/50-primarykeys.sql.j2
+++ b/src/moodle_tools/questions/templates/ddl_check_tablecorrectness/50-primarykeys.sql.j2
@@ -1,5 +1,5 @@
 -- Primary key columns
-SELECT name AS name_primarykey
+SELECT lower(name) AS name_primarykey
 FROM pragma_table_info("{{ tablename }}")
 WHERE pk
-ORDER BY name;
+ORDER BY lower(name);
