--- a/src/moodle_tools/questions/templates/ddl_check_tablecorrectness/20-types.sql.j2
+++ b/src/moodle_tools/questions/templates/ddl_check_tablecorrectness/20-types.sql.j2
@@ -1,12 +1,12 @@
 -- Column types
 -- fixed types
 with flex_cols as (
-    select unnest( map_keys( MAP
+    select lower(unnest( map_keys( MAP
         {{ flex_datatypes }}
-        ) ) as name_type
+        ) )) as name_type
 ),
      student_datatype as (
-         SELECT name AS name_type, type as datatype FROM pragma_table_info("{{ tablename }}") ORDER BY name
+         SELECT lower(name) AS name_type, type as datatype FROM pragma_table_info("{{ tablename }}") ORDER BY name
      )
 SELECT lower(name_type), datatype
 from student_datatype
@@ -21,10 +21,10 @@ WITH
             ), recursive := true)
     ),
     student_datatype as (
-        SELECT name AS name_type, type as datatype FROM pragma_table_info("{{ tablename }}") ORDER BY name
+        SELECT lower(name) AS name_type, type as datatype FROM pragma_table_info("{{ tablename }}") ORDER BY name
     ),
     flextype_flat as (
-        select "key" as col, unnest("value") as datatype
+        select lower("key") as col, unnest("value") as datatype
         from flextype_table
     ),
     correct_types as (select flextype_flat.col as flexible_column_name
