--- a/src/moodle_tools/questions/templates/ddl_check_tablecorrectness/60-foreignkeys.sql.j2
+++ b/src/moodle_tools/questions/templates/ddl_check_tablecorrectness/60-foreignkeys.sql.j2
@@ -1,8 +1,8 @@
 -- Foreign key columns
-SELECT lower(unnest(constraint_column_names)) AS name_fk_from, constraint_text as fk_constraint_text
+SELECT lower(unnest(constraint_column_names)) AS name_fk_from, lower(constraint_text) as fk_constraint_text
 from duckdb_constraints()
 where
     schema_name='main'
   and constraint_type = 'FOREIGN KEY'
-  and table_name='{{ tablename }}'
+  and lower(table_name)=lower('{{ tablename }}')
 ORDER BY lower(name_fk_from);
