--- a/src/moodle_tools/questions/templates/testlogic_ddl.py.j2
+++ b/src/moodle_tools/questions/templates/testlogic_ddl.py.j2
@@ -32,7 +32,7 @@ else:
 
 SEPARATOR = "#<ab@17943918#@>#"
 #test_results = [["Testfall", "Bewertung", "Maximal erreichbar", "iscorrect", "ishidden"]]
-test_results = [["Testfall", "Erhalten", "Erwartet", "iscorrect", "ishidden"]]
+test_results = [["Testfall", "Erhalten", "Erwartet", "iscorrect", "ishidden", ""]]
 
 
 old_stdout = sys.stdout
@@ -107,14 +107,14 @@ def run_testcase(testcase, db_working, db_files):
             )
 
             if (match_check or match_enum) and table_under_test in table_flex_enums:
-                print(f"CHECK constraint failed or wrong ENUM in table {table_under_test}")
+                print(f"CHECK constraint failed or wrong ENUM in table {table_under_test}".lower())
             elif match_check:
-                print(f"CHECK constraint failed on table {table_under_test}")
+                print(f"CHECK constraint failed on table {table_under_test}".lower())
             else:
-                print(e)
-                errors.append(str(e) if not hide_rest_if_fail else "")
+                print(str(e).lower())
+                #errors.append(str(e) if not hide_rest_if_fail else "")
         except duckdb.Error as e:
-            print(e)
+            print(str(e).lower())
             errors.append(str(e) if not hide_rest_if_fail else "")
         except Exception as e:
             raise (e)
@@ -152,7 +152,8 @@ for tc in test_cases:
             " " * (10 - len(tc_grade_str)) + tc_grade_str,
             " " * (10 - len(tc_max_str)) + tc_max_str,
             evaluated_result,
-            hide_rest_if_fail or tc['display'] == "HIDE" or (tc['display'] == "HIDE_IF_SUCCEED" and evaluated_result) or (tc['display'] == "HIDE_IF_FAIL" and not evaluated_result)
+            hide_rest_if_fail or tc['display'] == "HIDE" or (tc['display'] == "HIDE_IF_SUCCEED" and evaluated_result) or (tc['display'] == "HIDE_IF_FAIL" and not evaluated_result),
+            ""
         ])
 
         test_results.append([
@@ -160,7 +161,8 @@ for tc in test_cases:
             received_result,
             expected_result,
             evaluated_result,
-            True
+            True,
+            tc['testcode']
         ])
 
         if errors:
